--- a/aircraft.html
+++ b/aircraft.html
@@ -15,12 +15,23 @@
 <nav th:fragment="navbar" class="navbar bavbar-expand-lg nav-bg mb-2">
     <div>
         <h1>PREFACE</h1>
-        <p>     This guide has been organized and published for the Air Mobility Command Museum Staff and Volunteers.  It provides a good working knowledge of the museum and can be used as an easy reference for questions that come up during tours.  We encourage you to bring this guide with you while you are on duty, to make notes when you learn additional anecdotes, and to brush up on your facts before the next bus load of sixth graders descends on the museum.  The material in this manual is divided into three sections that group information in an easily accessible format.
+        <p> This guide has been organized and published for the Air Mobility Command Museum Staff and Volunteers. It
+            provides a good working knowledge of the museum and can be used as an easy reference for questions that come
+            up during tours. We encourage you to bring this guide with you while you are on duty, to make notes when you
+            learn additional anecdotes, and to brush up on your facts before the next bus load of sixth graders descends
+            on the museum. The material in this manual is divided into three sections that group information in an
+            easily accessible format.
 
-                As you use this book, the Museum Staff welcomes any noted corrections or additional material you feel would help you or others better serve our visitors.  Turn-in your suggestions to the Operations Manager.</p>
-        <p>SECTION I - Information about museum operations and procedures, general facts and historical background, and sample forms used by the museum.</p>
-        <p>SECTION II - Dedicated to our aircraft on display, in restoration, and in storage awaiting restoration.  It also includes information on the C-17 and on aircraft that may be acquired in the near future.  Information is listed in three categories.  Significant Facts, Assignment Records, and General Information about the aircraft.  Some aircraft with notable histories have additional information listed.</p>
-        <p>SECTION III - Miscellaneous information on other exhibits and areas of the museum including a brief history of the Rocketeers, and 95th and 98th Fighter Interceptor Squadrons.</p>
+            As you use this book, the Museum Staff welcomes any noted corrections or additional material you feel would
+            help you or others better serve our visitors. Turn-in your suggestions to the Operations Manager.</p>
+        <p>SECTION I - Information about museum operations and procedures, general facts and historical background, and
+            sample forms used by the museum.</p>
+        <p>SECTION II - Dedicated to our aircraft on display, in restoration, and in storage awaiting restoration. It
+            also includes information on the C-17 and on aircraft that may be acquired in the near future. Information
+            is listed in three categories. Significant Facts, Assignment Records, and General Information about the
+            aircraft. Some aircraft with notable histories have additional information listed.</p>
+        <p>SECTION III - Miscellaneous information on other exhibits and areas of the museum including a brief history
+            of the Rocketeers, and 95th and 98th Fighter Interceptor Squadrons.</p>
     </div>
     <div>
         <h1>SECTION I</h1>
@@ -36,50 +47,130 @@
     </div>
     <div class="container-fluid">
         <h1>SECTION II</h1>
-        <a href="firstlastonly.html">First, Last and Only</a>
-        <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
-        <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="invader.html">Douglas A-26C "Invader" 44-35523 (N3428G)</a>
-        <img alt="B-17G" src="Images/B-17G.jpg"/><a class="navbar-brand logo-font" href="flyingfortress.html">Boeing B-17G "Flying Fortress" 44-83624</a>
-        <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="galaxy.html">Lockheed C-5A "Galaxy" 69-0014</a>
-        <img alt="LGM-30" src="Images/LGM-30.JPG"/><a class="navbar-brand logo-font" href="/static">LGM-30 Minuteman Missile</a>
-        <img alt="C-7A" src="Images/C-7A.jpg"/><a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A "Caribou" 63-9760</a>
-        <img alt="C-9A" src="Images/C-9A.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A "Nightingale" 67-22584</a>
-        <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster III"</a>
-        <img alt="C-45G" src="Images/C-45G.jpg"/><a class="navbar-brand logo-font" href="/static">Beech C-45G "Expeditor"</a>
-        <img alt="C-46A 'Commando'" src="Images/C-46A.jpg"/><a class="navbar-brand logo-font" href="commando.html">Curtiss C-46A "Commando" 43-47350</a>
-        <img alt="C-47A" src="Images/C-47A.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-47A "Skytrain" 42-92841</a>
-        <img alt="M1A1 Howitzer" src="Images/M1A1Howitzer.jpg"/><a class="navbar-brand logo-font" href="/static">Pararack System/M1A1 75MM Pack Howitzer</a>
-        <img alt="C-54M" src="Images/C-54M.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-54M "Skymaster" 44-9030</a>
-        <img alt="C-60A" src="Images/C-60A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-60A "Lodestar" 42-55918</a>
-        <img alt="C-119C" src="Images/C-119C.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-119C "Flying Boxcar" 48-0352</a>
-        <img alt="C-119G" src="Images/C-119G.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-119G "Flying Boxcar" 50-12881</a>
-        <img alt="C-121C" src="Images/C-121C.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-121C "Super Constellation" 4557</a>
-        <img alt="C-123K" src="Images/C-123K.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-123K "Provider" 54-0658</a>
-        <img alt="C-124" src="Images/C-124.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-124A "Globemaster II" 49-0258</a>
-        <img alt="C-130E" src="Images/C-130E.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-130E "Hercules" 69-6580</a>
-        <img alt="C-131D" src="Images/C-131D.jpg"/><a class="navbar-brand logo-font" href="/static">Convair C-131D "Samaritan" 55-0295</a>
-        <img alt="C-133B" src="Images/C-133B.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-133B "Cargomaster" 59-0536</a>
-        <img alt="C-141A 'Starlifter'" src="Images/C-141A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-141A "Starlifter" 61-2775</a>
-        <img alt="C-141B" src="Images/C-141B.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-141B "Starlifter" 64-0626</a>
-        <img alt="F-101B" src="Images/F-101B.jpg"/><a class="navbar-brand logo-font" href="/static">McDonnell F-101B "Voodoo" 59-0428</a>
-        <img alt="F-106A" src="Images/F-106A.jpg"/><a class="navbar-brand logo-font" href="/static">Convair F-106A "Delta Dart" 59-0023</a>
-        <img alt="AIR-2" src="Images/AIR-2.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas AIR-2 "Genie"</a>
-        <img alt="L-2M" src="Images/L-2M.jpg"/><a class="navbar-brand logo-font" href="/static">Taylorcraft L-2M "Grasshopper" 43-26753</a>
-        <img alt="CG-4A" src="Images/CG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Waco CG-4A "Hadrian" 45-15009</a>
-        <img alt="TG-4A" src="Images/TG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Laister-Kauffman TG-4A "Angel Eyes, Yankee Doodle" 42-53078</a>
-        <img alt="UH-1H" src="Images/UH-1H.jpg"/><a class="navbar-brand logo-font" href="/static">Bell UH-1H "Iroquois aka Huey" 69-15475</a>
-        <img alt="HH-43B" src="Images/HH-43B.jpg" height="2236" width="1882"/><a class="navbar-brand logo-font" href="/static">Kaman HH-43B "Huskie" 62-4532</a>
-        <img alt="KB-50J" src="Images/KB-50.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KB-50J "Superfortress" 49-0389</a>
-        <img alt="KC-10A" src="Images/KC-10.jpg"/><a class="navbar-brand logo-font" href="/static">KC-10A "Extender" 79-0433</a>
-        <img alt="KC-97L" src="Images/KC-97.jpg"/><a class="navbar-brand logo-font" href="/static">KC-97L "Stratofreighter" 53-0230</a>
-        <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="tanker.html">Boeing KC-135E "Stratotanker" 57-1507</a>
-        <img alt="BT-13A" src="Images/BT-13A.jpg"/><a class="navbar-brand logo-font" href="/static">Vultee BT-13A "Valiant" 42-01639</a>
-        <img alt="PT-17" src="Images/PT-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing PT-17 "Kaydet"</a>
-        <img alt="T-33A" src="Images/T-33A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed T-33A "Shooting Star" 52-9497</a>
-        <img alt="T-37" src="Images/T-37.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-37 "Tweet" 56-576</a>
-        <img alt="T-41" src="Images/T-41.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-41 "Mescalero" 68-7895</a>
-        <img alt="U-3A" src="Images/U-3A.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe" 58-2126</a>
-        <img alt="VC-9C 'Air Force Two" src="Images/VC-9C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas VC-9C "Air Force Two, SAM 682" 73-1682</a>
+        <div>
+            <a href="firstlastonly.html">First, Last and Only</a>
+        </div>
+        <div>
+            <h2>Attack</h2>
+        <img alt="A-10C 'Warthog'" src="Images/A-10C.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild
+        Republic A-10C "Warthog" 78-0652</a>
+            <img alt="A-26C" src="Images/A-26C.jpg"/><a class="navbar-brand logo-font" href="invader.html">Douglas A-26C
+            "Invader" 44-35523 (N3428G)</a>
+        </div>
+        <div>
+            <h2>Bomber</h2>
+            <img alt="B-17G" src="Images/B-17G.jpg"/><a class="navbar-brand logo-font" href="flyingfortress.html">Boeing
+            B-17G "Flying Fortress" 44-83624</a>
+        </div>
+        <div>
+            <h2>Cargo</h2>
+            <img alt="C-5A 'Galaxy'" src="Images/C-5A.jpg"/><a class="navbar-brand logo-font" href="galaxy.html">Lockheed
+            C-5A "Galaxy" 69-0014</a>
+            <img alt="C-7A" src="Images/C-7A.jpg"/><a class="navbar-brand logo-font" href="/static">DeHavilland Canada C-7A
+            "Caribou" 63-9760</a>
+            <img alt="C-9A" src="Images/C-9A.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-9A
+            "Nightingale" 67-22584</a>
+            <img alt="C-17" src="Images/C-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing C-17 "Globemaster
+            III"</a>
+            <img alt="C-45G" src="Images/C-45G.jpg"/><a class="navbar-brand logo-font" href="/static">Beech C-45G
+            "Expeditor"</a>
+            <img alt="C-46A 'Commando'" src="Images/C-46A.jpg"/><a class="navbar-brand logo-font" href="commando.html">Curtiss
+            C-46A "Commando" 43-47350</a>
+            <img alt="C-47A" src="Images/C-47A.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-47A
+            "Skytrain" 42-92841</a>
+            <img alt="C-54M" src="Images/C-54M.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-54M
+            "Skymaster" 44-9030</a>
+            <img alt="C-60A" src="Images/C-60A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-60A
+            "Lodestar" 42-55918</a>
+            <img alt="C-119C" src="Images/C-119C.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-119C
+            "Flying Boxcar" 48-0352</a>
+            <img alt="C-119G" src="Images/C-119G.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-119G
+            "Flying Boxcar" 50-12881</a>
+            <img alt="C-121C" src="Images/C-121C.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-121C
+            "Super Constellation" 4557</a>
+            <img alt="C-123K" src="Images/C-123K.jpg"/><a class="navbar-brand logo-font" href="/static">Fairchild C-123K
+            "Provider" 54-0658</a>
+            <img alt="C-124" src="Images/C-124.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-124A
+            "Globemaster II" 49-0258</a>
+            <img alt="C-130E" src="Images/C-130E.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-130E
+            "Hercules" 69-6580</a>
+            <img alt="C-131D" src="Images/C-131D.jpg"/><a class="navbar-brand logo-font" href="/static">Convair C-131D
+            "Samaritan" 55-0295</a>
+            <img alt="C-133B" src="Images/C-133B.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas C-133B
+            "Cargomaster" 59-0536</a>
+            <img alt="C-141A 'Starlifter'" src="Images/C-141A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed
+            C-141A "Starlifter" 61-2775</a>
+            <img alt="C-141B" src="Images/C-141B.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed C-141B
+            "Starlifter" 64-0626</a>
+        </div>
+        <div>
+            <h2>Fighter</h2>
+            <img alt="F-101B" src="Images/F-101B.jpg"/><a class="navbar-brand logo-font" href="/static">McDonnell F-101B
+            "Voodoo" 59-0428</a>
+            <img alt="F-106A" src="Images/F-106A.jpg"/><a class="navbar-brand logo-font" href="/static">Convair F-106A
+            "Delta Dart" 59-0023</a>
+        </div>
+        <div>
+            <h2>Liason</h2>
+            <img alt="L-2M" src="Images/L-2M.jpg"/><a class="navbar-brand logo-font" href="/static">Taylorcraft L-2M
+            "Grasshopper" 43-26753</a>
+        </div>
+        <div>
+            <h2>Glider</h2>
+            <img alt="CG-4A" src="Images/CG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Waco CG-4A "Hadrian"
+            45-15009</a>
+            <img alt="TG-4A" src="Images/TG-4A.jpg"/><a class="navbar-brand logo-font" href="/static">Laister-Kauffman TG-4A
+            "Angel Eyes, Yankee Doodle" 42-53078</a>
+        </div>
+        <div>
+            <h2>Helicopter</h2>
+            <img alt="UH-1H" src="Images/UH-1H.jpg"/><a class="navbar-brand logo-font" href="/static">Bell UH-1H "Iroquois
+            aka Huey" 69-15475</a>
+            <img alt="HH-43B" src="Images/HH-43B.jpg" height="2236" width="1882"/><a class="navbar-brand logo-font" href="/static">Kaman HH-43B "Huskie" 62-4532</a>
+        </div>
+        <div>
+            <h2>Tanker</h2>
+            <img alt="KB-50J" src="Images/KB-50.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing KB-50J
+            "Superfortress" 49-0389</a>
+            <img alt="KC-10A" src="Images/KC-10.jpg"/><a class="navbar-brand logo-font" href="/static">KC-10A "Extender"
+            79-0433</a>
+            <img alt="KC-97L" src="Images/KC-97.jpg"/><a class="navbar-brand logo-font" href="/static">KC-97L
+            "Stratofreighter" 53-0230</a>
+            <img alt="KC-135E 'Stratotanker'" src="Images/KC-135E.jpg"/><a class="navbar-brand logo-font" href="tanker.html">Boeing KC-135E "Stratotanker" 57-1507</a>
+        </div>
+        <div>
+            <h2>Trainer</h2>
+            <img alt="BT-13A" src="Images/BT-13A.jpg"/><a class="navbar-brand logo-font" href="/static">Vultee BT-13A
+            "Valiant" 42-01639</a>
+            <img alt="PT-17" src="Images/PT-17.jpg"/><a class="navbar-brand logo-font" href="/static">Boeing PT-17
+            "Kaydet"</a>
+            <img alt="T-33A" src="Images/T-33A.jpg"/><a class="navbar-brand logo-font" href="/static">Lockheed T-33A
+            "Shooting Star" 52-9497</a>
+            <img alt="T-37" src="Images/T-37.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-37 "Tweet"
+            56-576</a>
+            <img alt="T-41" src="Images/T-41.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna T-41 "Mescalero"
+            68-7895</a>
+        </div>
+        <div>
+            <h2>Light Cargo/Pass</h2>
+            <img alt="U-3A" src="Images/U-3A.jpg"/><a class="navbar-brand logo-font" href="/static">Cessna U-3A "Blue Canoe"
+            58-2126</a>
+        </div>
+        <div>
+            <h2>VIP Passenger</h2>
+            <img alt="VC-9C 'Air Force Two" src="Images/VC-9C.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas
+            VC-9C "Air Force Two, SAM 682" 73-1682</a>
+        </div>
+        <div>
+            <h2>Other Equipment/Locations</h2>
+            <img alt="Air Trafic Control Information" src="Images/Tower.jpg"/><a class="navbar-brand logo-font" href="tower.html">Air Traffic Control Tower</a>
+            <img alt="LGM-30" src="Images/LGM-30.JPG"/><a class="navbar-brand logo-font" href="/static">LGM-30 Minuteman
+            Missile</a>
+            <img alt="M1A1 Howitzer" src="Images/M1A1Howitzer.jpg"/><a class="navbar-brand logo-font" href="/static">Pararack
+            System/M1A1 75MM Pack Howitzer</a>
+            <img alt="AIR-2" src="Images/AIR-2.jpg"/><a class="navbar-brand logo-font" href="/static">Douglas AIR-2
+            "Genie"</a>
+        </div>
     </div>
     <div>
         <h1>SECTION III</h1>
