--- a/flyingfortress.html
+++ b/flyingfortress.html
@@ -19,6 +19,145 @@
 <p>5. This B-17 was on display at the Air Force Museum Dayton, OH from 1957 - 1989.</p>
 <p>6. The aircraft is painted as "Sleep Time Gal" 42-107112, another B-17 assigned to the 381st BG.</p>
 <p>7. Nose-art was painted in 1995 by noted aviation artist Gil Cohen.</p>
+<h2>Assignment Record Highlights Of B-17G, Tail Number 44-83624</h2>
+<p>The B-17G, Tail Number 44-83624, was manufactured by Douglas Aircraft, Long Beach, California to the United States Army Air Force on 26 April 1945.</p>
+<table>
+    <tr>
+        <th>-         Year    -</th>
+        <th>-         Month And Day     -</th>
+        <th>Record</th>
+    </tr>
+    <tr>
+        <th>1945</th>
+        <th>April</th>
+        <th>To 4100th Base Unit, Patterson Field, Ohio</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>May</th>
+        <th>To 532nd BS/381st BG, Royal Air Force Ridgewell, UK</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>October</th>
+        <th>Declared excess</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>05 November</th>
+        <th>Returned to military use</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>07 November</th>
+        <th>To 4168th Base Unit, South Plains Field, Texas</th>
+    </tr>
+    <tr>
+        <th>1947</th>
+        <th>July</th>
+        <th>To 4141st Base Unit, Pyote2 Field, Texas</th>
+    </tr>
+    <tr>
+        <th>1948</th>
+        <th>January</th>
+        <th>To 4112th Base Unit, Olmstead Air Force Base, Pennsylvania</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>02 February</th>
+        <th>Redesignated MB-17G</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>15 February</th>
+        <th>To 605th Base Unit, Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>16 February</th>
+        <th>To 1st Experimental Guided Missile Group (Air Proving Ground Command), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th>1949</th>
+        <th>March</th>
+        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>November</th>
+        <th>Redesignated TB-17G</th>
+    </tr>
+    <tr>
+        <th>1950</th>
+        <th>January</th>
+        <th>To 550th Guided Missile Wing (APGC), Eglin, Florida</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>June</th>
+        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th>1951</th>
+        <th>February</th>
+        <th>To 3201st Air Base Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>01 June</th>
+        <th>To 3200th Proof Test Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th>1953</th>
+        <th>22 June</th>
+        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>November</th>
+        <th>To 3560th Pilot Training Training Wing (Air Training Command), Webb Air Force Base, Texas</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>December</th>
+        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th>1955</th>
+        <th>04 April</th>
+        <th>To Ogden Air Material Area, Hill Air Force Base, Utah</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>11 April</th>
+        <th>To Middletown Air Material Area, Olmstead Air Force Base, Pennsylvania</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>01 June</th>
+        <th>Redesignated DB-17G</th>
+    </tr>
+    <tr>
+        <th></th>
+        <th>07 June</th>
+        <th>To 3205th Drone Group (APGC), Eglin Air Force Base, Florida</th>
+    </tr>
+    <tr>
+        <th>1957</th>
+        <th>June</th>
+        <th>Droppe from the USAF inventory by transfer to USAF Museum in Wright-Patterson Air Force Base, Ohio</th>
+    </tr>
+    <tr>
+        <th>1989</th>
+        <th>July</th>
+        <th>Transferred to Dover Air Force Base Museum for display</th>
+    </tr>
+    <tr>
+        <th>1995</th>
+        <th>September</th>
+        <th>Painted in 381st Bomb Group markings.  Gil Cohen paints "Sleepy Time Gal" nose art.</th>
+    </tr>
+</table>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
